<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zfoo</groupId>
    <artifactId>net</artifactId>
    <version>3.0</version>

    <packaging>jar</packaging>

    <properties>
        <zfoo.version>3.0</zfoo.version>

        <!-- spring and spring boot -->
        <spring.version>6.0.11</spring.version>
        <spring.boot.version>3.1.3</spring.boot.version>
        <junit.version>4.12</junit.version>

        <!-- bytecode enhancement(字节码增强) -->
        <javassist.version>3.29.2-GA</javassist.version>
        <bytebuddy.version>1.14.6</bytebuddy.version>

        <!-- network framework -->
        <netty.version>4.1.97.Final</netty.version>

        <!-- zookeeper -->
        <curator.version>5.5.0</curator.version>

        <!-- hardware detection(硬件检测) -->
        <oshi.version>6.4.5</oshi.version>

        <!-- database and cache -->
        <mongodb-driver-sync.version>4.10.2</mongodb-driver-sync.version>
        <caffeine.version>3.1.8</caffeine.version>

        <!-- Office document parsing(office文档解析包) -->
        <poi.version>5.2.3</poi.version>
        <csv.version>1.10.0</csv.version>

        <java.version>17</java.version>
        <file.encoding>UTF-8</file.encoding>

        <!-- maven core plugin(maven核心插件) -->
        <maven-clean-plugin.version>3.3.1</maven-clean-plugin.version>
        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
        <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
        <versions-maven-plugin.version>2.16.0</versions-maven-plugin.version>

        <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
        <maven.compiler.encoding>${file.encoding}</maven.compiler.encoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.zfoo</groupId>
            <artifactId>event</artifactId>
            <version>${zfoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.zfoo</groupId>
            <artifactId>scheduler</artifactId>
            <version>${zfoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.zfoo</groupId>
            <artifactId>protocol</artifactId>
            <version>${zfoo.version}</version>
        </dependency>

        <!-- 依赖的通信类库 -->
        <!--        <dependency>-->
        <!--            <groupId>io.netty</groupId>-->
        <!--            <artifactId>netty-all</artifactId>-->
        <!--            <version>${netty.version}</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport-native-epoll</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-codec-http2</artifactId>
            <version>${netty.version}</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javassist.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-recipes</artifactId>
            <version>${curator.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>netty-transport-native-epoll</artifactId>
                    <groupId>io.netty</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>netty-handler</artifactId>
                    <groupId>io.netty</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>guava</artifactId>
                    <groupId>com.google.guava</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>${caffeine.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
            <version>${spring.boot.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
            </plugin>


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${file.encoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <encoding>${file.encoding}</encoding>
                            <outputDirectory>${project.build.directory}/resource</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources/</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <threadCount>8</threadCount>
                    <argLine>-Dfile.encoding=${file.encoding}</argLine>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>
        </plugins>
    </build>


</project>
